--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "informed": "^3.6.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-calendar": "^3.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-slick": "^0.25.2",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
