--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,7 @@
     "react-bootstrap": "^1.0.0-beta.17",
     "react-calendar": "^3.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "react-slick": "^0.25.2",
-    "slick-carousel": "^1.8.1"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
