--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "fuse.js": "^5.0.7-beta",
     "informed": "^3.6.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-calendar": "^3.0.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.9.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
