--- a/frontend/config-nginx/corona-atlas.conf
+++ b/frontend/config-nginx/corona-atlas.conf
@@ -30,5 +30,9 @@ server {
     # Enforces https content and restricts JS/CSS to origin
     # External Javascript (such as cast_sender.js for Chromecast) must be whitelisted.
     add_header Content-Security-Policy "default-src https: data: blob:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; worker-src 'self' blob:; connect-src 'self'; object-src 'none'; frame-ancestors 'self'";
+
+    location /api-internal {
+        proxy_pass http://backend:8080;
+    }
 }
 
