--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-calendar": "^3.0.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
+    "react-query": "^1.0.33",
     "react-scripts": "3.4.1"
   },
   "scripts": {
