--- a/frontend/config-nginx/corona-atlas.conf
+++ b/frontend/config-nginx/corona-atlas.conf
@@ -34,5 +34,13 @@ server {
     location /api-internal {
         proxy_pass http://backend:8080;
     }
+
+    location /auth {
+        proxy_pass http://backend:8080;
+    }
+
+    location / {
+        try_files $uri /index.html =404;
+    }
 }
 
