dockerfile update to support certificate path & domain name via .env file

--- a/frontend/config-nginx/corona-atlas.conf
+++ b/frontend/config-nginx/corona-atlas.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name www.cotip.de;
+    server_name "${DOMAIN}";
 
     # Uncomment to redirect HTTP to HTTPS
     return 301 https://$host$request_uri;
@@ -10,13 +10,13 @@ server {
 server {
     root /usr/share/nginx/html;
     listen 443 ssl http2;
-    server_name www.cotip.de;
-    ssl_certificate /etc/letsencrypt/live/www.cotip.de-0002/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/www.cotip.de-0002/privkey.pem;
+    server_name ${DOMAIN};
+    ssl_certificate ${CERTIFICATE_PATH}/fullchain.pem;
+    ssl_certificate_key ${CERTIFICATE_PATH}/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     add_header Strict-Transport-Security "max-age=31536000" always;
-    ssl_trusted_certificate /etc/letsencrypt/live/www.cotip.de-0002/chain.pem;
+    ssl_trusted_certificate ${CERTIFICATE_PATH}/chain.pem;
     ssl_stapling on;
     ssl_stapling_verify on;
 
@@ -33,6 +33,9 @@ server {
 
     location /api-internal {
         proxy_pass http://backend:8080;
+    }
+    location /api-internal/auth {
+        proxy_pass http://backend:8000;
     }
 }
 
