--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.4.1",
     "fuse.js": "^5.0.7-beta",
     "informed": "^3.6.1",
+    "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-calendar": "^3.0.0",
